pedigree/src/main/resources/pedigree/editor.css
/* ... */
.menu-box .field-box textarea {
  width: 99%;
  resize: none;
  border: 1px solid #E8E8E8;
}
/* 3.3em height is set because firefox does not respect the rows qualifier for the textarea,
   displaying one more line than most other browsers. Less than 3.3em and there is no scrollbar in FF */
.menu-box .field-box .textarea-2-rows {
  height: 3.3em;
}
.menu-box .field-box .textarea-3-rows {
  height: 4.3em;
}
.import-upload {
  display: block;
  margin: 0.2em 0 0.75em 7.5em;
  text-align: left;
}
/*
.import-selector {
  overflow: auto;
}*/
.import-selector .import-textarea {
  height: 10em;
  resize: none;
  width: 84%;
  /*border: 1px solid #E8E8E8;*/
  margin: .2em .2em 0 7.5em;
  display: block;
}
.import-block {
  margin: 0.75em 0 0.5em 0;
  display: block;
}
.import-block-bottom {
  margin: 1.25em 0 0.5em 0;
}
.import-section {
  font-weight: bold;
  float: left;
}
.import-type-label {
  float: left;
  margin: 0 1em 0 0.8em;
}
.import-config-label {
  float: left;
  margin: 0 1em 0 2.5em;
}
.export-config-header {
  float: left;
  margin: 0 1em 0 2.95em;
}
.export-subconfig-label {
  float: left;
  margin: 0 1em 0 3.5em;
}
.import-mark-label1 {
  float: left;
  margin: 0.25em 1em 0 2.5em;
}
.import-mark-label2 {
  float: left;
  margin: 0 1em 0 2.5em;
}
.menu-box .field-box textarea:focus {
  border: 1px solid #DDD;
}
.menu-box .field-name {
  display: block;
  font-weight: bold;
}
.menu-box .accepted-suggestions li {
  line-height: 1em;
  padding: .2em 1em .1em 0;
  font-size: 85%
}
.menu-box .accepted-suggestions li:hover {
  background-color: #FFEE99;
}
.menu-box .accepted-suggestions li .delete-tool {
  position: absolute;
  top: .4em;
  right: 0;
  display: inline !important;
}
.field-values label {
  display: block;
}
.field-values {
  -moz-column-count: 2;
  -webkit-column-count: 2;
  column-count: 2;
}
.field-values-3-columns {
  -moz-column-count: 3;
  -webkit-column-count: 3;
  column-count: 3;
}
.field-values-3-columns label {
  display: block;
}
.field-values-3-columns .state_deceased {
}
.field-values-3-columns .state_miscarriage {
  margin-bottom: 1px;  /* otherwise the bottom pixel of the letter "g" in "miscarriage" is displayed at the top of the next column in Chrome */
}
.field-values-3-columns .state_unborn {
}
.field-values-3-columns .state_aborted {
}
.field-inputs {
  display: table;
  width: 100%;
  padding-top: 0.2em;
}
.field-inputs>span {
  display: table-cell;
}

.menu-box .field-first_name {
  width: 48%;
  float: left;
}
.menu-box .field-last_name {
  width: 48%;
  float: right;
}
.menu-box .field-last_name_birth {
  width: 48%;
  float: left;
  padding: .5em 0 0.9em;
}
.menu-box .field-external_id {
  width: 48%;
  float: right;
  padding: .5em 0 0.9em;
}
.menu-box .field-date_of_birth {
  width: 48%;
  float: left;
  margin-bottom: 6px;
}
.menu-box .field-date_of_death {
  width: 48%;
  float: right;
  margin-top: -5px; /* TODO: investigate why elements float below its intended position */
  margin-bottom: 6px;
}
.menu-box .accepted-suggestions {
  margin: 0px 0px 0.3em !important;
}
.menu-box .field-childlessText {
  padding: 0 0;
}
.menu-box .field-adopted {
  padding: 0.26em 0;
}
.menu-box .field-monozygotic {
  padding: 0.26em 0;
}
.menu-box .field-nocontact {
  padding: 0.26em 0;
}
.menu-box .field-placeholder {
  padding: 0.26em 0;
}
.menu-box .field-gestation_age {
  padding: 0.45em 0;
}
.menu-box .field-evaluated {
  padding-top: 0.7em;
  padding-bottom: 0.5em;
  padding-right: 0;
  padding-left: 0.08em;
}
.menu-box .field-evaluated .field-name {
  font-weight: normal;
}
.menu-box .field-carrier {
  padding-top: 0.8em;
  padding-bottom: 0em;
  padding-right: 0;
  padding-left: 0;
}
.menu-box .field-hpo_positive {
  padding: 1em 0;
}
/* Disable the "browse ontology" button, as ontology browser events are not supported (yet) */
.tooltip-phenotype-info .term-tools {
  display: none;
}
.menu-box .field-disorders {
  padding: 0.6em 0;
}
.menu-box .field-candidate_genes {
  padding: 0.6em 0;
}
.menu-box .field-identifier {
  padding: 0 0;
}
.menu-box .field-childlessSelect {
  padding: 0.5em 0 0.5em;
}

/* ===========================================
 * NODE TYPE OPTIONS
 */
.callout {
  position: absolute;
  width: auto;
  padding: 3px 0;
  border: 1px solid #F5F5F5;
  border-radius: 4px;
  background: #EEE;
  text-align: center;
  white-space: nowrap !important;
  box-shadow: 0 0 6px #FF9, 0 0 25px #DDDDDD inset;
}
.callout .callout-handle {
  position: absolute;
  top: -8px;
  border: 10px solid #e5e5e5;
  border-top-width: 0;
  border-left-color: transparent;
  border-right-color: transparent;
  display: block;
  width: 0;
  z-index: 10;
  margin-left: -10px;
}
.callout.upside .callout-handle {
  border-top-width: 10px;
  border-bottom-width: 0;
  top: auto;
  bottom: -8px;
}
.node-type-options {
  position: relative;
}
.node-type-options .separator {
  display: inline-block;
  width: 0;
  margin: 0 8px;
  overflow: hidden;
}
.node-type-options .node-type-option {
  background: transparent none center center no-repeat;
  border: 1px solid #F5F5F5;
  border-radius: 4px;
  display: inline-block;
  margin: 3px;
  height: 24px;
  width: 24px;
  box-shadow: 0 0 9px #DDDDDD inset;
  color: black !important;
  vertical-align: middle;
  text-decoration: none !important;
 /*
  TODO: Keep this:
  overflow: hidden;
  text-indent: 48px;
  line-height: 48px;
  font-size: 1px;
  TODO: remove this
  */
  text-align: center;
  line-height: 24px;
}
/* The unicode symbols we use for different node types have disproportionate sizes.
   Adjusting the font size for a cleaner look:
*/
.fa-rotate-45 {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
  display: inline-block !important;
  font-size: 90%;
}
.expand-arrow {
  cursor: pointer;
  font-size: 15px;
  margin-left: -1px;
  margin-right: 2px;
}
.expand-arrow:hover {
  color: #6666CC;
}
/* ... */

